Refactor nvim styles; lang server works

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,20 +7,24 @@
     "javascript",
     "typescript"
   ],
-  "suggest.minTriggerInputLength": 1,
   "coc.preferences.formatOnType": true,
-  "languageserver": {   
+  "codeLens.enable": true,
+  "suggest.minTriggerInputLength": 1,
+  "languageserver": {
     "elmLS": {
       "enable": true,
       "command": "elm-language-server",
-      "filetypes": ["elm"],
-      "rootPatterns": ["elm.json"],
+      "filetypes": [
+        "elm"
+      ],
+      "rootPatterns": [
+        "elm.json"
+      ],
       "trace.server": "off",
       "initializationOptions": {
         "elmFormatPath": "elm-format",
         "elmAnalyseTrigger": "save"
       }
     }
-  },
-  "codeLens.enable": true
+  }
 }
