--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,7 +4,8 @@
     "css",
     "scss",
     "javascript",
-    "typescript"
+    "typescript",
+    "json",
   ],
  "prettier.tabWidth": 2,
  "coc.preferences.codeLens.enable": true,
@@ -14,5 +15,11 @@
       "filetypes": ["elm"],
       "rootPatterns": ["elm.json"]
     }
-  }
+  },
+  "rust-analyzer.inlayHints.typeHints.enable": false,
+  "rust-analyzer.inlayHints.typeHints.hideClosureInitialization": true,
+  "rust-analyzer.inlayHints.closingBraceHints.enable": false,
+  "rust-analyzer.inlayHints.chainingHints.enable": false,
+  "rust-analyzer.inlayHints.parameterHints.enable": false,
+  "rust-analyzer.inlayHints.closureReturnTypeHints.enable": "never"
 }
