--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,19 +1,41 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "elm",
-    "css",
-    "scss",
-    "javascript",
-    "typescript",
-    "json",
-  ],
- "prettier.tabWidth": 2,
- "coc.preferences.codeLens.enable": true,
+  "coc.preferences.formatOnSave": true,
+  "prettier.tabWidth": 2,
   "languageserver": {
     "elmLS": {
       "command": "elm-language-server",
       "filetypes": ["elm"],
       "rootPatterns": ["elm.json"]
+    },
+    "haskell": {
+      "command": "haskell-language-server-wrapper",
+      "args": ["--lsp"],
+      "rootPatterns": [
+        "*.cabal",
+        "stack.yaml",
+        "cabal.project",
+        "package.yaml",
+        "hie.yaml"
+      ],
+      "filetypes": ["haskell", "lhaskell"],
+      "settings": {
+        "haskell": {
+          "checkParents": "CheckOnSave",
+          "checkProject": true,
+          "maxCompletions": 40,
+          "formattingProvider": "ormolu",
+          "plugin": {
+            "stan": { "globalOn": true }
+          }
+        }
+      }
+    },
+    "terraform": {
+      "command": "terraform-ls",
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
+      "initializationOptions": {},
+      "settings": {}
     }
   },
   "rust-analyzer.inlayHints.typeHints.enable": false,
