--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,23 +3,17 @@ unbind C-b
 unbind C-w
 set-option -g prefix C-a
 bind-key C-a send-prefix
-
 bind r source-file ~/.tmux.conf
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
 
-# better splitting
-unbind -
-bind - split-window -v -c "#{pane_current_path}"
-bind | split-window -h -c "#{pane_current_path}"
-
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Use hjkl to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Enable mouse interaction
 set -g mouse on
@@ -46,37 +40,32 @@ set -g bell-action none
 #  modes
 setw -g clock-mode-colour colour5
 setw -g mode-style 'fg=colour1 bg=colour18 bold'
-  
+
 # panes
 set -g pane-border-style 'fg=colour19 bg=colour0'
 set -g pane-active-border-style 'bg=colour0 fg=colour9'
- 
+
 # statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour0 fg=colour255'
 set -g status-left ''
-set -g status-right '#[fg=colour255,bg=colour0] %H:%M '
+set -g status-right '#[fg=colour255,bg=colour0] %H:%M'
 set -g status-right-length 50
 set -g status-left-length 20
-  
+
 setw -g window-status-current-format ' #[fg=colour160]#F #[fg=colour255]#W'
 setw -g window-status-format '#[fg=colour244]#F #[fg=colour255]#W'
-  
-# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
- 
-# messages
-# set -g message-style 'fg=colour232 bg=colour16 bold'
-  
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
 # Use bash as default shell
-set-option -g default-shell /bin/bash
-  
+set-option -g default-shell /usr/bin/bash
+
 # Remove delay from Esc key
 set -sg escape-time 0
 
 # Support true colors
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+# set-option -sa terminal-overrides ',xterm-256color:Tc'
 
-# TMUX plugin manager 
-run -b '~/.tmux/plugins/tpm/tpm'
